src/components/utils/styles/addtocartbutton.module.css
/* components/common-utils/styles/addtocartbutton.module.css */

.main {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* max-width: 200px; */
  /* Adjusted for better layout */
  font-family: Jost, sans-serif;
  background-color: #424242;
  color: white;
  padding: 0.5rem 0;
  border-radius: 0.4rem;
  outline: none;
  font-size: 1rem;
  height: 2.2rem;
  position: relative;
  overflow: hidden;
  width: 100%;
  min-width: 150px;
  transition: all 0.3s ease;
  /* Smooth transition for style changes */
  font-family: Jost, sans-serif;
  margin-top: 0.5rem;

}



/* New class for black button */
.blackButton {
  background-color: #424242;
  color: white;
}

/* New class for large button */
.largeButton {
  width: 180px;
  /* Twice the original width */
  min-width: 180px;
  height: 4rem;
  /* Twice the original height */
  font-size: 2rem;
  /* Increase font size */
  font-weight: 700;
  letter-spacing: 0.1rem;
}

/* Ensure text inside the button inherits the color correctly */
.addToCart {
  justify-content: center;
  cursor: pointer;
  font-size: 1.2rem;
  font-family: Jost, sans-serif;
  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
  min-width: 150px;
}

.largeButton:hover {
  scale: 0.95;
  opacity: 0.9;
  letter-spacing: 0.3rem;
}

.blackButton .addToCart {
  color: white;
}

.decrement,
.increment {
  background-color: #424242;
  color: white;
  outline: none;
  border: none;
  cursor: pointer;
  font-size: 1.2rem;
  padding: 0.8rem;
  transition: background-color 0.2s ease;
  min-width: 15%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.increment:disabled{
  opacity: 0.5;
}

.decrement:hover,
.increment:hover {
  /* background-color: #424242; */
}


.blackButton .decrement,
.blackButton .increment {
  color: white;
  /* background-color: black; */
}

.quantity {
  cursor: default;
  font-size: 1rem;
  /* margin: 0 0.5rem; */
  min-width: 20px;
  text-align: center;
  color: white;
}

.blackButton .quantity {
  color: white;
}

@media (max-width: 400px){
  .addToCart{
    font-size: 0.9rem;
    min-width: 130px;
  }
  .main{
    padding: 0.5rem 0;
    /* width: 130px; */
    min-width: 110px;
  }
}

